--- a/index.html
+++ b/index.html
@@ -27,5 +27,43 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </nav>
+    <div style='padding-bottom:40px;'>
+
+    </div>
+    <div class="row home-main">
+      <div class="col-12 home-sub1" style="display: block; margin:auto;">
+        <div class="row">
+          <div class="col-12" id="home-features">
+            <div class="ak-header">
+              <span>Toolbox</span>
+              <div class="ak-separator"></div>
+            </div>
+            <div class="home-content">
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="ak-header">
+                  <span>To Do List</span>
+                  <div class="ak-separator"></div>
+                </div>
+                <ul style="background-color: #2a2a2a; border-radius: 15px; color:white; padding-top: 15px; padding-bottom: 15px; bottom-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 06px 20px 0 rgba(0, 0, 0, 0.19)">
+                  <li>1.---</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-separator" style="height:100px;"></div>
+    <div class="row">
+      <div class="col-12 ak-footer chara-footer-1">
+        <div class="col-12 text-center" style="height:50px;">
+          <span style="vertical-aling: middle; line-height: 50px;"></span>
+        </div>
+      </div>
+    </div>
   </body>
+  <script src=""></script>
+  <script src=""></script>
 </html>
