--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#222222ff">
     <title translate-id="web-title">Ghost Lookup</title>
     <link rel="mainfest" href="./mainfest.json" crossorigin="use-credentials">
-    <link rel='stylesheet' href="css/main.css">
+    <link rel='stylesheet' href="css/ak.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css'>
     <link rel="shortcut icon" type="image/x-icon" href=".ico">
     <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
