--- a/ghostlookup.html
+++ b/ghostlookup.html
@@ -35,5 +35,25 @@
         }, 1000);
       });
     </script>
+    <nav id="aknav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
+      <img src="./img/factions/goldstar1.png" style="transform:scale(1.2,1.2)translate(-8px,1px)" class="d-inline-block align-top" alt="" width="40" height="40">
+        <a class="navbar-brand" href="#" translate-id="topbar-1">Cool Toolbox</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="展开">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    <div style="padding-bottom:40px;"></div>
+    <div class="col-md-12 col-sm-12" style="margin:auto:max-width:1000px;padding:0;">
+      <div class="col-12 ak-back ak-shadow mt-3" style="padding:15px;padding-top:0%;padding-bottom:0;border-radius:0px;" role="alert">
+        <div class="row" style="padding:0;padding-bottom:4px;">
+          <div class="col-12 btn btn-sm ak-btn ak-c-black ak-shadow ak-shadow-small ak-disable" style="padding:0;" translate-id:"selector-title">Select the tags:</div>
+        </div>
+        <div class="row ak-small-row">
+          <div class="col-md-2 col-sm-12 my-1 ak-disable ak-btn-header ak-btn-header-span" translate-id:"selector-categories-0">
+            Custom Input
+          </div>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
