--- a/index.html
+++ b/index.html
@@ -1,69 +1,12 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="theme-color" content="#222222ff">
-    <title translate-id="web-title">Ghost Lookup</title>
-    <link rel="mainfest" href="./mainfest.json" crossorigin="use-credentials">
-    <link rel='stylesheet' href="css/ak.css">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css'>
-    <link rel="shortcut icon" type="image/x-icon" href=".ico">
-    <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js'></script>
-    <script>
-            $(function(){
-              $('#nav-placeholder').load('nav.html');
-            });
-     </script>
+    <title>ToolBox For Fun</title>
   </head>
   <body>
-    <nav id="aknav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
-      <img src="./img/state/goldstar1.png" width="40" height="40" style="transform:scale(1.2,1.2)translate(-8px,1px)"class="d-inline-block align-top" alt="">
-      <a class="navbar-brand" href="#" translate-id="topbar-1">Cool Toolbox</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="展开">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav>
+      
     </nav>
-    <div style='padding-bottom:40px;'>
-
-    </div>
-    <div class="row home-main">
-      <div class="col-12 home-sub1" style="display: block; margin:auto;">
-        <div class="row">
-          <div class="col-12" id="home-features">
-            <div class="ak-header">
-              <span>Toolbox</span>
-              <div class="ak-separator"></div>
-            </div>
-            <div class="home-content">
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="ak-header">
-                  <span>To Do List</span>
-                  <div class="ak-separator"></div>
-                </div>
-                <ul style="background-color: #2a2a2a; border-radius: 15px; color:white; padding-top: 15px; padding-bottom: 15px; bottom-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 06px 20px 0 rgba(0, 0, 0, 0.19)">
-                  <li>1.---</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="footer-separator" style="height:100px;"></div>
-    <div class="row">
-      <div class="col-12 ak-footer chara-footer-1">
-        <div class="col-12 text-center" style="height:50px;">
-          <span style="vertical-aling: middle; line-height: 50px;"></span>
-        </div>
-      </div>
-    </div>
   </body>
-  <script src=""></script>
-  <script src=""></script>
 </html>
