--- a/ghostlookup.html
+++ b/ghostlookup.html
@@ -1,59 +1,31 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="theme-color" content="#222222ff">
-    <title translate-id="web-title">Ghost Lookup</title>
-    <link rel="mainfest" href="./mainfest.json" crossorigin="use-credentials">
-    <link rel='stylesheet' href="css/main.css">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css'>
-    <link rel="shortcut icon" type="image/x-icon" href=".ico">
-    <script src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js'></script>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js'></script>
-  </head>
-  <body>
-    <div id="loadingOverlay" style="width: 100vw; height: 150%; background-color: #111111; position: absolute; z-index: 9999;">
-      <div class="d-flex justify-content-center" style="margin-top: 50vh;">
-        <div class="spinner-border" role="status" style="border-color: #0098DC; border-right-color: transparent; width: 4rem; height: 4rem;"
-        </div>
-      </div>
-      <div style="width: 100%; text-align: center; margin-top: 13px;">
-        <div class="loadtext">Loading Toolbox</div>
-        <div></div>
-        <div class="loadforce" onclick="hideload()"><a>Click if stuck</a></div>
-      </div>
-    </div>
-    <script>
-      $(function(){
-        $('#nav-placeholder').load('nav.html');
-      });
-      $(window).on("load", functio () {
-        setTimeout(function () {
-          $("#loadingOverlay").fadeOut();
-        }, 1000);
-      });
-    </script>
-    <nav id="aknav" class="navbar fixed-top navbar-expand-md navbar-dark bg-dark" style="background-image: linear-gradient(#222222ff 70%,#222222ff , #111111aa );">
-      <img src="./img/factions/goldstar1.png" style="transform:scale(1.2,1.2)translate(-8px,1px)" class="d-inline-block align-top" alt="" width="40" height="40">
-        <a class="navbar-brand" href="#" translate-id="topbar-1">Cool Toolbox</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="展开">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    <div style="padding-bottom:40px;"></div>
-    <div class="col-md-12 col-sm-12" style="margin:auto:max-width:1000px;padding:0;">
-      <div class="col-12 ak-back ak-shadow mt-3" style="padding:15px;padding-top:0%;padding-bottom:0;border-radius:0px;" role="alert">
-        <div class="row" style="padding:0;padding-bottom:4px;">
-          <div class="col-12 btn btn-sm ak-btn ak-c-black ak-shadow ak-shadow-small ak-disable" style="padding:0;" translate-id:"selector-title">Select the tags:</div>
-        </div>
-        <div class="row ak-small-row">
-          <div class="col-md-2 col-sm-12 my-1 ak-disable ak-btn-header ak-btn-header-span" translate-id:"selector-categories-0">
-            Custom Input
-          </div>
 
-        </div>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>ToolBox For Fun</title>
+</head>
+
+<body>
+
+  <div class="navbar">
+    <img src="/img/logo.png" alt="" width="40" height="40" class="logo">
+    <a href="#">COOLTOOLBOX</a>
+    <a href="index.html">Home</a>
+    <a href="contact.html">contact</a>
+    <div class="dropdown">
+      <button class="dropbtn">Misc.Toolbox
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="ghostlookup.html">Ghost</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
