--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>ToolBox For Fun</title>
-  </head>
-  <body>
-    <nav>
-      
-    </nav>
-  </body>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>ToolBox For Fun</title>
+</head>
+
+<body>
+
+  <div class="navbar">
+    <img src="/img/logo.png" alt="" width="40" height="40" class="logo">
+    <a href="#">COOLTOOLBOX</a>
+    <a href="index.html">Home</a>
+    <a href="contact.html">contact</a>
+    <div class="dropdown">
+      <button class="dropbtn">Misc.Toolbox
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="ghostlookup.html">Ghost</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
