--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="/img/logo.png" alt="" width="40" height="40" class="logo">
     <a href="#">COOLTOOLBOX</a>
     <a href="index.html">Home</a>
-    <a href="contact.html">contact</a>
+    <a href="contact.html">Contact</a>
     <div class="dropdown">
       <button class="dropbtn">Misc.Toolbox
         <i class="fa fa-caret-down"></i>
