--- a/ghostlookup.html
+++ b/ghostlookup.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="js/main.js"></script>
-  <title>ToolBox For Fun</title>
+  <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">
+  <title>Ghost Lookup</title>
 </head>
 
 <body>
