--- a/ghostlookup.html
+++ b/ghostlookup.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="js/main.js"></script>
@@ -16,7 +16,7 @@
     <img src="/img/logo.png" alt="" width="40" height="40" class="logo">
     <a href="#">COOLTOOLBOX</a>
     <a href="index.html">Home</a>
-    <a href="contact.html">Contact</a>
+    <!--<a href="contact.html">Contact</a>-->
     <div class="dropdown">
       <button class="dropbtn">Misc.Toolbox
         <i class="fa fa-caret-down"></i>
