--- a/ghostlookup.html
+++ b/ghostlookup.html
@@ -16,15 +16,14 @@
     <img src="/img/logo.png" alt="" width="40" height="40" class="logo">
     <a href="#">COOLTOOLBOX</a>
     <a href="index.html">Home</a>
-    <!--<a href="contact.html">Contact</a>-->
     <div class="dropdown">
-      <button class="dropbtn">Misc.Toolbox
+      <button class="dropbtn">Links
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
         <a href="ghostlookup.html">Ghost</a>
         <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
   </div>
