--- a/ghostlookup.html
+++ b/ghostlookup.html
@@ -27,9 +27,9 @@
       </div>
     </div>
   </div>
-  <div class="ghostlookup">
+  <!--<div class="ghostlookup">-->
     <div class="ghosts">
-      <table>
+      <table class="gtable">
         <tr>
           <td class="gname">Banshee</td>
           <td class="lightbox" id="emflight1"></td>
@@ -123,7 +123,7 @@
         </tr>
       </table>
     </div>
-  </div>
+  <!--</div>-->
 </body>
 <span></span>
 
