Updates and reworks

--- a/ghostlookup.html
+++ b/ghostlookup.html
@@ -108,13 +108,13 @@
       <table>
         <tr>
           <td><button type="button" name="button" class="gbutton" onclick="emf()"><span id="emfb">EMF LEVEL 5</span></button></td>
-          <td><button type="button" name="button" class="gbutton" onclick="orb()"><span id="orbb">GHOST ORB</button></td>
-          <td><button type="button" name="button" class="gbutton" onclick="gw()"><span id="gwb">GHOST WRITING</button></td>
+          <td><button type="button" name="button" class="gbutton" onclick="orb()"><span id="orbb">GHOST ORB</span></button></td>
+          <td><button type="button" name="button" class="gbutton" onclick="gw()"><span id="gwb">GHOST WRITING</span></button></td>
         </tr>
         <tr>
-          <td><button type="button" name="button" class="gbutton" onclick="ft()"><span id="ftb">FREEZING TEMP</button></td>
-          <td><button type="button" name="button" class="gbutton" onclick="sb()"><span id="sbb">SPIRIT BOX</button></td>
-          <td><button type="button" name="button" class="gbutton" onclick="fp()"><span id="fpb">FINGER PRINTS</button></td>
+          <td><button type="button" name="button" class="gbutton" onclick="ft()"><span id="ftb">FREEZING TEMP</span></button></td>
+          <td><button type="button" name="button" class="gbutton" onclick="sb()"><span id="sbb">SPIRIT BOX</span></button></td>
+          <td><button type="button" name="button" class="gbutton" onclick="fp()"><span id="fpb">FINGER PRINTS</span></button></td>
         </tr>
         <tr>
           <td></td>
