--- a/ghostlookup.html
+++ b/ghostlookup.html
@@ -121,7 +121,7 @@
         </tr>
         <tr>
           <td></td>
-          <td><button type="button" name="button" class="gbutton" onclick="clear()">CLEAR</button></td>
+          <td><button type="button" name="button" class="gbutton" onclick="clearbtn()">CLEAR</button></td>
           <td></td>
         </tr>
       </table>
